--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
 <body>
 
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/3.5.0/lodash.min.js"></script>
+
 <script type="text/javascript" src="//d1g8h12lk9ydf.cloudfront.net/js/v1.19.0/meshblu.bundle.js"></script>
 <script type="text/javascript" src="/js/Tone.js"></script>
 <script type="text/javascript" src="/dist/application.js"></script>
